AmÃ©lioration de l'interface d'approvisionnement et corrections diverses
- Ajout de cartes de statistiques (total commandes, montant, commandÃ©es, en retard)
- AmÃ©lioration du design du tableau (en-tÃªte avec dÃ©gradÃ©, meilleurs espacements)
- Formatage des montants avec 2 dÃ©cimales
- AmÃ©lioration de la prÃ©sentation des numÃ©ros de suivi
- Ajout du composant DeliveryProgressBar pour visualiser les dates de livraison
- Correction des marges et espacements (padding responsive sur le conteneur principal)
- Correction des offcanvas (animations CSS, z-index, suppression espacement en haut)
- Correction du bug de sauvegarde du fournisseur lors de la crÃ©ation de commande
- Optimisation du build (code-splitting pour amÃ©liorer les performances)
- Ajout des traductions manquantes

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -661,6 +661,9 @@
     "noOrders": "Aucune commande",
     "noOrdersDescription": "Commencez par créer votre première commande d'achat",
     "createFirstOrder": "Créer la première commande",
+    "totalOrders": "Total commandes",
+    "ordered": "Commandées",
+    "overdue": "En retard",
     "itemsToReceive": "Articles à recevoir",
     "noItemsToReceive": "Aucun article à recevoir",
     "maxQuantity": "Quantité max",
