feat: remplacer le troisieme pave par le nombre total d'articles commandes
- Modification du calcul des statistiques pour afficher le nombre total d'articles commandes

- Ajout des traductions francaises et chinoises pour supply.totalItemsOrdered

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -663,6 +663,7 @@
     "createFirstOrder": "Créer la première commande",
     "totalOrders": "Total commandes",
     "ordered": "Commandées",
+    "totalItemsOrdered": "Articles commandés",
     "overdue": "En retard",
     "itemsToReceive": "Articles à recevoir",
     "noItemsToReceive": "Aucun article à recevoir",
