--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -599,6 +599,10 @@
     "noOrders": "无订单",
     "noOrdersDescription": "开始创建您的第一个采购订单",
     "createFirstOrder": "创建第一个订单",
+    "totalOrders": "总订单数",
+    "ordered": "已订购",
+    "totalItemsOrdered": "订购商品总数",
+    "overdue": "逾期",
     "itemsToReceive": "待收货商品",
     "noItemsToReceive": "无待收货商品",
     "maxQuantity": "最大数量",
