feat: Ajout du module de suivi des tracking numbers avec Ã©dition inline
- CrÃ©ation de la table tracking_numbers avec calculs automatiques (volume, coÃ»ts USD/MGA)
- Synchronisation automatique des tracking numbers depuis les commandes d'achat
- Support d'un tracking number pour plusieurs commandes (relation 1-N)
- Interface d'Ã©dition inline dans le tableau (sans modal)
- Colonnes figÃ©es : Tracking Number Ã  gauche, CoÃ»t MGA/Statut/Actions Ã  droite
- Calculs en temps rÃ©el du volume (6 dÃ©cimales) et des coÃ»ts de transit
- Menu ajoutÃ© dans la navigation (groupe inventory)

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -51,6 +51,7 @@
     "stock": "Stocks",
     "deliveries": "Livraisons",
     "supply": "Approvisionnement",
+    "tracking": "Tracking Numbers",
     "settings": "Paramètres",
     "profile": "Profil"
   },
@@ -610,6 +611,53 @@
     "french": "Français",
     "chinese": "中文",
     "switchLanguage": "Changer de langue"
+  },
+  "tracking": {
+    "title": "Suivi des Tracking Numbers",
+    "subtitle": "Gérez les numéros de suivi et calculez les coûts de transit",
+    "newTracking": "Nouveau Tracking",
+    "editTracking": "Modifier le Tracking",
+    "trackingNumber": "Numéro de suivi",
+    "purchaseOrder": "Commande d'achat",
+    "selectPurchaseOrder": "Sélectionner une commande",
+    "noAvailableOrders": "Aucune commande disponible avec un tracking number",
+    "dimensions": "Dimensions",
+    "length": "Longueur",
+    "width": "Largeur",
+    "height": "Hauteur",
+    "volume": "Volume",
+    "weight": "Poids",
+    "ratePerM3": "Tarif par m³",
+    "ratePerKg": "Tarif par kg",
+    "exchangeRate": "Taux de change",
+    "costByVolume": "Coût par volume",
+    "costByWeight": "Coût par poids",
+    "totalCostUSD": "Coût total (USD)",
+    "totalCostMGA": "Coût total (MGA)",
+    "calculatedCosts": "Coûts calculés",
+    "costUSD": "Coût USD",
+    "costMGA": "Coût MGA",
+    "statusLabel": "Statut",
+    "notes": "Notes",
+    "notesPlaceholder": "Notes optionnelles...",
+    "searchPlaceholder": "Rechercher par tracking, commande ou fournisseur...",
+    "allStatuses": "Tous les statuts",
+    "totalTracking": "Total tracking",
+    "noTrackingNumbers": "Aucun numéro de suivi",
+    "noTrackingNumbersFound": "Aucun numéro de suivi trouvé",
+    "confirmDelete": "Êtes-vous sûr de vouloir supprimer ce tracking ?",
+    "deleteError": "Erreur lors de la suppression",
+    "saveError": "Erreur lors de l'enregistrement",
+    "requiredFields": "Veuillez remplir tous les champs obligatoires",
+    "syncTracking": "Synchroniser",
+    "editOnly": "La création de tracking numbers se fait automatiquement depuis les commandes",
+    "ordersCount": "commandes",
+    "status": {
+      "pending": "En attente",
+      "in_transit": "En transit",
+      "arrived": "Arrivé",
+      "received": "Reçu"
+    }
   },
   "supply": {
     "title": "Gestion des Approvisionnements",
