feat: Amélioration du formulaire de réception avec cours de change et calcul automatique des prix
- Ajout du champ cours de change MGA dans les réceptions
- Calcul automatique du prix unitaire : (prix d'achat × cours de change) + frais de transit
- Affichage du prix unitaire directement en MGA quand cours de change saisi
- Validation du prix minimum (prix d'achat + frais de transit)
- Interface améliorée : conversion en tableau pour meilleure lisibilité
- Masquage des champs optionnels (frais de transit, numéro de lot, date d'expiration, notes)
- Icône d'information (i) dans le champ prix unitaire pour détail du calcul
- Pré-remplissage des notes depuis la commande d'achat
- Migration SQL pour ajouter exchange_rate_mga à la table receipts

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -702,6 +702,12 @@
     "quantityOrdered": "Quantité commandée",
     "quantityReceived": "Quantité reçue",
     "unitPrice": "Prix unitaire",
+    "transitCost": "Frais de transit",
+    "transitCostInfo": "Calculé automatiquement",
+    "exchangeRateMGA": "Cours de change MGA",
+    "exchangeRateMGAInfo": "Taux de change USD vers MGA",
+    "unitPriceMGA": "Prix unitaire (MGA)",
+    "totalMGA": "Total (MGA)",
     "total": "Total",
     "selectProduct": "Sélectionner un produit",
     "searchProducts": "Rechercher des produits",
