recher des ventes par produit

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -156,7 +156,7 @@
     "totalAmount": "Montant total",
     "noSales": "Aucune vente enregistrée",
     "noSalesFound": "Aucune vente trouvée pour ces critères",
-    "searchPlaceholder": "Rechercher par client, téléphone ou description...",
+    "searchPlaceholder": "Rechercher par client, téléphone, description ou produit...",
     "searchSales": "Rechercher des ventes...",
     "descriptionPlaceholder": "Description de la vente",
     "amountPlaceholder": "0.00",
